<resources>
    <string name="app_name">UpMood</string>
    <string name="button">Button</string>
    <string name="search_your_favorite_songs">Search your favorite songs</string>
    <string name="premium">Premium</string>
    <string name="thu_vien">Thư viện</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="s">Search your favorite songs</string>
    <string name="todo">TODO</string>
    <string name="tod">TODO</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="have_account">ALREADY HAVE A ACCOUNT</string>
    <string name="enter_user">Enter email</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_re_password">Confirm password</string>
    <string name="check_box">I agree with the Terms and conditions and the Privacy policy.</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="phone">Phone Numbers</string>
    <string name="open_nav_drawer">Open Navigation</string>
    <string name="close_nav_drawer">Close Navigation</string>
    <string name="facebook_app_id">1250741335870990</string>
    <string name="fb_login_protocol_scheme">fb1250741335870990</string>
    <string name="facebook_client_token">c2188ac2b0ebf85e3556213bb5aae33c</string>
    <string name="thinhhanh">Đang thịnh hành</string>
    <string name="cothebanmuonnghe">Có thể bạn muốn nghe</string>
    <string name="cute">Chill cùng UPMOOD</string>
    <string name="nodata">Không tìm thấy bài hát của bạn</string>


</resources>