<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_user"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextTextPersonName1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_email2"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextTextPassword1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_re_password"
                android:inputType="textPassword"
                tools:ignore="VisualLintTextFieldSize" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/check_box"
                android:textColor="#09A72B"
                android:textSize="18dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_signin"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>