<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:text=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="#03FFFFFF"
        android:text="@string/forgot_password"
        android:textColor="#0277BD"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_signin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:src="@drawable/ke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/facebook"
            android:contentDescription="@string/app_name"
            android:text="" />

        <Button
            android:id="@+id/button4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/google"
            android:contentDescription="@string/app_name"
            android:text="" />
    </LinearLayout>

</LinearLayout>